--- a/css/style.css
+++ b/css/style.css
@@ -613,6 +613,7 @@ body {
   position: absolute;
   width: 528px;
   height: 581px;
+  padding: 40px;
   background-color: #ffffff;
   top: 50%;
   left: 50%;
@@ -639,5 +640,72 @@ body {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+}
+.modal-form-head {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-color);
+  margin-bottom: 12px;
+}
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+}
+.modal-form-checkbox {
+}
+.modal-form-message {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  resize: none;
+  margin-top: 4px;
+}
+.modal-form-message::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+}
+.modal-form-icon {
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+}
+
+.modal-form-btn {
+  display: block;
+}
+.modal-form-input-wrapper {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin-top: 4px;
+}
+.modal-form-input:focus,
+.modal-form-message:focus {
+  border-color: var(--accent-color);
+  outline: none;
+}
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--accent-color);
+}
+.modal-form-field {
+  margin-bottom: 28px;
 }
 /* === End Modal=== */
