--- a/css/style.css
+++ b/css/style.css
@@ -92,10 +92,12 @@ body {
 .social-list-link:hover,
 .social-list-link:focus {
   background-color: var(--accent-color);
+   outline: none;
 }
 .social-list-link:hover .social-list-icon,
 .social-list-link:focus .social-list-icon {
   fill: var(--color-hero-title);
+   outline: none;
 }
 /* === END COMPONENTS=== */
 
@@ -148,6 +150,7 @@ body {
 .menu-link:hover,
 .menu-link:focus {
   color: var(--accent-color);
+   outline: none;
 }
 .menu-list .menu-link.current {
   color: var(--accent-color);
@@ -170,6 +173,7 @@ body {
 .tel-link:hover,
 .tel-link:focus {
   color: var(--accent-color);
+   outline: none;
 }
 
 .email-link:hover .contacts-icon,
@@ -177,6 +181,7 @@ body {
 .tel-link:hover .contacts-icon,
 .tel-link:focus .contacts-icon {
   fill: var(--accent-color);
+   outline: none;
 }
 .menu-link.current::after {
   content: '';
@@ -242,6 +247,7 @@ body {
 .modal-btn:hover,
 .modal-btn:focus {
   background-color: var(--btn-bg-hover);
+   outline: none;
 }
 /* === end HERO=== */
 
@@ -385,10 +391,12 @@ body {
 .cliens-list-link:focus {
   /* border: 1px solid #2196f3; */
   border-color: var(--accent-color);
+   outline: none;
 }
 .cliens-list-link:hover .cliens-icon,
 .cliens-list-link:focus .cliens-icon {
   fill: var(--accent-color);
+   outline: none;
 }
 /*====== end Cliens =======*/
 
@@ -491,6 +499,7 @@ body {
 .examples-item-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+     outline: none;
 }
 .examples-item-link:hover .overlay,
 .examples-item-link:focus .overlay {
@@ -542,6 +551,7 @@ body {
 .address-email-link:focus,
 .address-tel-link:focus {
   color: var(--accent-color);
+   outline: none;
 }
 .logo-colorwhite {
   color: var(--color-hero-title);
@@ -632,10 +642,20 @@ body {
   position: absolute;
   top: 8px;
   right: 8px;
-}
+   outline: none; 
+   }
+
 .modal-btn-close {
-  fill: #000000;
+  fill: var(--logo-color);
+  outline: none;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
+ .modal-close:hover .modal-btn-close,
+.modal-close:focus .modal-btn-close {
+  fill: var(--accent-color);
+   cursor: pointer;
+     }  
+ 
 .is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -660,9 +680,9 @@ body {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form-checkbox {
-}
+
 .modal-form-message {
   width: 100%;
   height: 120px;
@@ -685,10 +705,25 @@ body {
   top: 50%;
   left: 15px;
   transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-btn {
-  display: block;
+  align-self: center;
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  background-color: var(--accent-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--color-hero-title);
+  outline: none;
+  border: none;
+  margin-top: 30px;
+}
+.modal-form-btn:hover,
+ .modal-form-btn:focus{
+    background-color: var(--btn-bg-hover);
+    cursor: pointer;
 }
 .modal-form-input-wrapper {
   position: relative;
@@ -706,6 +741,48 @@ body {
   fill: var(--accent-color);
 }
 .modal-form-field {
-  margin-bottom: 28px;
+  margin-bottom: 10px;
+  font-weight: 400px;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.01em;
+color: var(--description-color);
+}
+.modal-form-checkbox-policy::before{
+  display: inline-block;
+  vertical-align: middle;
+  content: "";
+  width: 16px;
+  height: 15px;
+  border:2px solid var(--logo-color);
+  border-radius: 2px;
+  margin-right: 7px;
+}
+.modal-form-checkbox-policy{
+font-weight: 400px;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: var(--description-color);
+margin-top: 10px;
+}
+.modal-form-checkbox:checked + .modal-form-checkbox-policy::before{
+  background-image: url("../images/iconmodal/iconcheck.svg");
+  background-size: contain;
+  border: none;
+  outline: none;
+}
+.modal-form-checkbox:focus + .modal-form-checkbox-policy::before{
+  border:2px solid var(--accent-color);
+}
+.visually-hidden {
+  position: absolute!important;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px 1px 1px 1px);
+  padding: 0!important;
+  border: 0!important;
+  height: 1px!important;
+  width: 1px!important;
+  overflow: hidden;
 }
 /* === End Modal=== */
