--- a/css/style.css
+++ b/css/style.css
@@ -92,12 +92,12 @@ body {
 .social-list-link:hover,
 .social-list-link:focus {
   background-color: var(--accent-color);
-   outline: none;
+  outline: none;
 }
 .social-list-link:hover .social-list-icon,
 .social-list-link:focus .social-list-icon {
   fill: var(--color-hero-title);
-   outline: none;
+  outline: none;
 }
 /* === END COMPONENTS=== */
 
@@ -150,7 +150,7 @@ body {
 .menu-link:hover,
 .menu-link:focus {
   color: var(--accent-color);
-   outline: none;
+  outline: none;
 }
 .menu-list .menu-link.current {
   color: var(--accent-color);
@@ -173,7 +173,7 @@ body {
 .tel-link:hover,
 .tel-link:focus {
   color: var(--accent-color);
-   outline: none;
+  outline: none;
 }
 
 .email-link:hover .contacts-icon,
@@ -181,7 +181,7 @@ body {
 .tel-link:hover .contacts-icon,
 .tel-link:focus .contacts-icon {
   fill: var(--accent-color);
-   outline: none;
+  outline: none;
 }
 .menu-link.current::after {
   content: '';
@@ -247,7 +247,7 @@ body {
 .modal-btn:hover,
 .modal-btn:focus {
   background-color: var(--btn-bg-hover);
-   outline: none;
+  outline: none;
 }
 /* === end HERO=== */
 
@@ -391,12 +391,12 @@ body {
 .cliens-list-link:focus {
   /* border: 1px solid #2196f3; */
   border-color: var(--accent-color);
-   outline: none;
+  outline: none;
 }
 .cliens-list-link:hover .cliens-icon,
 .cliens-list-link:focus .cliens-icon {
   fill: var(--accent-color);
-   outline: none;
+  outline: none;
 }
 /*====== end Cliens =======*/
 
@@ -499,7 +499,7 @@ body {
 .examples-item-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-     outline: none;
+  outline: none;
 }
 .examples-item-link:hover .overlay,
 .examples-item-link:focus .overlay {
@@ -551,7 +551,7 @@ body {
 .address-email-link:focus,
 .address-tel-link:focus {
   color: var(--accent-color);
-   outline: none;
+  outline: none;
 }
 .logo-colorwhite {
   color: var(--color-hero-title);
@@ -603,6 +603,67 @@ body {
 .social-list-join-container {
   margin-left: 70px;
 }
+.form-footer-head {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--color-hero-title);
+  margin-bottom: 20px;
+}
+.form-footer-btn {
+  display: flex;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  background-color: var(--accent-color);
+  border-radius: 4px;
+  border: none;
+  outline: none;
+  margin-left: 12px;
+  color: var(--color-hero-title);
+  padding: 10px 32px;
+  font-style: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  padding: 10px 28px;
+}
+.form-footer-btn:hover,
+.form-footer-btn:focus {
+  background-color: var(--btn-bg-hover);
+}
+.form-footer-btn-icon {
+  margin-left: 10px;
+}
+.form-list {
+  display: flex;
+}
+.form-footer-btn-icon {
+  fill: var(--color-hero-title);
+}
+.modal-form-footer {
+  display: inline-block;
+  margin-left: 93px;
+}
+.form-footer-input {
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  color: var(--color-hero-title);
+}
+.form-footer-input::placeholder {
+  font-style: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
 /* === END FOOTER=== */
 /* === Modal=== */
 .backdrop {
@@ -642,20 +703,20 @@ body {
   position: absolute;
   top: 8px;
   right: 8px;
-   outline: none; 
-   }
+  outline: none;
+}
 
 .modal-btn-close {
   fill: var(--logo-color);
   outline: none;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
- .modal-close:hover .modal-btn-close,
+.modal-close:hover .modal-btn-close,
 .modal-close:focus .modal-btn-close {
   fill: var(--accent-color);
-   cursor: pointer;
-     }  
- 
+  cursor: pointer;
+}
+
 .is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -721,9 +782,9 @@ body {
   margin-top: 30px;
 }
 .modal-form-btn:hover,
- .modal-form-btn:focus{
-    background-color: var(--btn-bg-hover);
-    cursor: pointer;
+.modal-form-btn:focus {
+  background-color: var(--btn-bg-hover);
+  cursor: pointer;
 }
 .modal-form-input-wrapper {
   position: relative;
@@ -743,46 +804,46 @@ body {
 .modal-form-field {
   margin-bottom: 10px;
   font-weight: 400px;
-font-size: 12px;
-line-height: 1.17;
-letter-spacing: 0.01em;
-color: var(--description-color);
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--description-color);
 }
-.modal-form-checkbox-policy::before{
+.modal-form-checkbox-policy::before {
   display: inline-block;
   vertical-align: middle;
-  content: "";
+  content: '';
   width: 16px;
   height: 15px;
-  border:2px solid var(--logo-color);
+  border: 2px solid var(--logo-color);
   border-radius: 2px;
   margin-right: 7px;
 }
-.modal-form-checkbox-policy{
-font-weight: 400px;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
-color: var(--description-color);
-margin-top: 10px;
+.modal-form-checkbox-policy {
+  font-weight: 400px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--description-color);
+  margin-top: 10px;
 }
-.modal-form-checkbox:checked + .modal-form-checkbox-policy::before{
-  background-image: url("../images/iconmodal/iconcheck.svg");
+.modal-form-checkbox:checked + .modal-form-checkbox-policy::before {
+  background-image: url('../images/iconmodal/iconcheck.svg');
   background-size: contain;
   border: none;
   outline: none;
 }
-.modal-form-checkbox:focus + .modal-form-checkbox-policy::before{
-  border:2px solid var(--accent-color);
+.modal-form-checkbox:focus + .modal-form-checkbox-policy::before {
+  border: 2px solid var(--accent-color);
 }
 .visually-hidden {
-  position: absolute!important;
+  position: absolute !important;
   clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
   clip: rect(1px 1px 1px 1px);
-  padding: 0!important;
-  border: 0!important;
-  height: 1px!important;
-  width: 1px!important;
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
   overflow: hidden;
 }
 /* === End Modal=== */
