--- a/css/style.css
+++ b/css/style.css
@@ -612,6 +612,10 @@ body {
   color: var(--color-hero-title);
   margin-bottom: 20px;
 }
+.form-list {
+  display: flex;
+  flex-direction: row;
+}
 .form-footer-btn {
   display: flex;
   align-items: center;
@@ -637,14 +641,11 @@ body {
 .form-footer-btn-icon {
   margin-left: 10px;
 }
-.form-list {
-  display: flex;
-}
+
 .form-footer-btn-icon {
   fill: var(--color-hero-title);
 }
 .modal-form-footer {
-  display: inline-block;
   margin-left: 93px;
 }
 .form-footer-input {
@@ -655,6 +656,9 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   color: var(--color-hero-title);
+}
+.form-footer-field {
+  display: block;
 }
 .form-footer-input::placeholder {
   font-style: 400;
@@ -777,7 +781,7 @@ body {
   background-color: var(--accent-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--color-hero-title);
-  outline: none;
+  /* outline: none; */
   border: none;
   margin-top: 30px;
 }
@@ -803,7 +807,15 @@ body {
 }
 .modal-form-field {
   margin-bottom: 10px;
-  font-weight: 400px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--description-color);
+}
+.modal-form-field-massage {
+  margin-bottom: 20px;
+  font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
@@ -820,7 +832,7 @@ body {
   margin-right: 7px;
 }
 .modal-form-checkbox-policy {
-  font-weight: 400px;
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -828,8 +840,11 @@ body {
   margin-top: 10px;
 }
 .modal-form-checkbox:checked + .modal-form-checkbox-policy::before {
-  background-image: url('../images/iconmodal/iconcheck.svg');
+  background-image: url('../images/iconmodal/Vector.svg');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
   background-size: contain;
+  background-color: var(--accent-color);
   border: none;
   outline: none;
 }
@@ -845,5 +860,11 @@ body {
   height: 1px !important;
   width: 1px !important;
   overflow: hidden;
+}
+.modal-form-policy-link {
+  color: var(--accent-color);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 /* === End Modal=== */
